--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
                 <label class="col-sm-2 col-form-label">Student</label>
                 <select name="Student" class="form-select" aria-label="Default select example"
                     onchange="StudentSelected(this.value)">
-                    <option selected>Open this select menu</option>
+                    <option selected>Open this</option>
                     <option value="department">Department</option>
                     <option value="locations">Locations</option>
                     <option value="major">Major</option>
